--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,24 +1,59 @@
 ---
-- name: install selinux bindings 
-  yum: name={{ item }} state=present 
+#- name: Install EPEL repo from package
+  #yum:
+    #name: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
+    #state: present
+  ##when: ansible_distribution != 'CentOS'
+
+#- name: Install IUS.io repo
+  #yum:
+    #name: "https://{{ distro_kind }}{{ ansible_distribution_major_version }}.iuscommunity.org/ius-release.rpm"
+    #state: present
+    #
+#- name: Add/update CA Certs
+  #yum: name=ca-certificates state=latest disablerepo=epel
+
+- name: install ca package on rhel systems
+  yum:
+    name: ca-certificates
+    state: present
+    #disablerepo: epel
+  when: ansible_os_family == "RedHat"
+
+#- name: enable dynamic ca configuration on rhel6
+  #shell: /bin/update-ca-trust enable
+  #when: ansible_os_family == "RedHat"  and ansible_distribution_major_version|int == 6
+
+- name: enable dynamic ca configuration on centos6
+  shell: update-ca-trust force-enable
+  when: ansible_distribution == "CentOS" and ansible_distribution_major_version|int == 6
+
+- include: "epel.yml"
+- include: "ius.yml"
+
+- name: Install SELinux bindings for ansible
+  yum: name={{ item }} state=present
   with_items:
     - libsemanage-python
-    - libselinux-python 
+    - libselinux-python
 
-- name: Copy the NGINX repository definition
-  copy: src=nginx.repo dest=/etc/yum.repos.d/
-  
-- name: Copy the EPEL repository definition
-  copy: src=epel.repo dest=/etc/yum.repos.d/
+- name: Install Palette Dev Team tools
+  yum: name={{ item }} state=present
+  with_items:
+    - vim
+    - git
+    - curl
+    - wget
+    - screen
+    - tmux
+    - htop
+#- name: Copy the EPEL repository definition
+  #copy: src=epel.repo dest=/etc/yum.repos.d/
 
-- name: Create the GPG key for NGINX
-  copy: src=RPM-GPG-KEY-NGINX dest=/etc/pki/rpm-gpg
-
-- name: Create the GPG key for EPEL
-  copy: src=RPM-GPG-KEY-EPEL-6 dest=/etc/pki/rpm-gpg
-  
-  
-  
+#- name: Create the GPG key for EPEL
+  #copy: src=RPM-GPG-KEY-EPEL-6 dest=/etc/pki/rpm-gpg
 
 - name: Copy the Palette repository definition
   copy: src=palette.repo dest=/etc/yum.repos.d/
+
+
