--- a/ansible/roles/insight-server/tasks/main.yml
+++ b/ansible/roles/insight-server/tasks/main.yml
@@ -1,23 +1,27 @@
 ---
 
 - name: Install Insight Server package
-  yum: name=palette-insight-server state=installed
-  notify:
-    - restart supervisor
-  
-  
+  yum: name=palette-insight-server state=latest
+
+- name: Copy supervisord configuration
+  copy: src=supervisor.conf dest=/etc/palette-insight-server/supervisor.conf
+
+- name: (Re)start palette insight server via Supervisor
+  supervisorctl: name=palette-insight-server state=restarted config=/etc/palette-insight-server/supervisor.conf
+
+
 
 #- name: Configure SELinux to start mysql on any port
 #  seboolean: name=mysql_connect_any state=true persistent=yes
 #
 #- name: Create Mysql configuration file
 #  template: src=my.cnf.j2 dest=/etc/my.cnf
-#  notify: 
+#  notify:
 #  - restart mariadb
-  
+
 #- name: Create MariaDB log file
 #  file: path=/var/log/mysqld.log state=touch owner=mysql group=mysql mode=0775
-  
+
 #- name: Start MariaDB Service
 #  service: name=mariadb state=started enabled=yes
 
