--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,18 +1,4 @@
 ---
-#- name: Install EPEL repo from package
-  #yum:
-    #name: "https://dl.fedoraproject.org/pub/epel/epel-release-latest-{{ ansible_distribution_major_version }}.noarch.rpm"
-    #state: present
-  ##when: ansible_distribution != 'CentOS'
-
-#- name: Install IUS.io repo
-  #yum:
-    #name: "https://{{ distro_kind }}{{ ansible_distribution_major_version }}.iuscommunity.org/ius-release.rpm"
-    #state: present
-    #
-#- name: Add/update CA Certs
-  #yum: name=ca-certificates state=latest disablerepo=epel
-
 - name: install ca package on rhel systems
   yum:
     name: ca-certificates
@@ -37,23 +23,8 @@
     - libsemanage-python
     - libselinux-python
 
-- name: Install Palette Dev Team tools
-  yum: name={{ item }} state=present
-  with_items:
-    - vim
-    - git
-    - curl
-    - wget
-    - screen
-    - tmux
-    - htop
-#- name: Copy the EPEL repository definition
-  #copy: src=epel.repo dest=/etc/yum.repos.d/
-
-#- name: Create the GPG key for EPEL
-  #copy: src=RPM-GPG-KEY-EPEL-6 dest=/etc/pki/rpm-gpg
-
 - name: Copy the Palette repository definition
   copy: src=palette.repo dest=/etc/yum.repos.d/
 
-
+- name: Install PIP
+  package: name=python-pip state=present
