--- a/ansible/insight-server.yml
+++ b/ansible/insight-server.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install Palette Insight
   hosts: insight-server
-  remote_user: vagrant
+  remote_user: "{{ uservar }}"
   # remote_user: user
   become: yes
   become_user: root
