--- a/ansible/roles/nginx/templates/default.conf
+++ b/ansible/roles/nginx/templates/default.conf
@@ -1,31 +1,43 @@
-server {
-        listen       {{ nginx_port }} default_server;
-        server_name  {{ server_hostname }};
-        root /srv/wordpress/ ;
- 
-	client_max_body_size 64M;
- 
-	# Deny access to any files with a .php extension in the uploads directory
-        location ~* /(?:uploads|files)/.*\.php$ {
-                deny all;
-        }
- 
-        location / {
-                index index.php index.html index.htm;
-                try_files $uri $uri/ /index.php?$args;
-        }
- 
-        location ~* \.(gif|jpg|jpeg|png|css|js)$ {
-                expires max;
-        }
- 
-        location ~ \.php$ {
-                try_files $uri =404;
-                fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                fastcgi_index index.php;
-                fastcgi_pass  unix:/var/run/php-fpm/wordpress.sock;
-                fastcgi_param   SCRIPT_FILENAME
-                                $document_root$fastcgi_script_name;
-                include       fastcgi_params;
-        }
+# For more information on configuration, see:
+#   * Official English Documentation: http://nginx.org/en/docs/
+#   * Official Russian Documentation: http://nginx.org/ru/docs/
+
+user              nginx;
+worker_processes  1;
+
+error_log  /var/log/nginx/error.log;
+#error_log  /var/log/nginx/error.log  notice;
+#error_log  /var/log/nginx/error.log  info;
+
+pid        /var/run/nginx.pid;
+
+
+events {
+    worker_connections  1024;
 }
+
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    # Load config files from the /etc/nginx/conf.d directory
+    # The default server is in conf.d/default.conf
+    include /etc/nginx/conf.d/*.conf;
+
+}
+
