--- a/ansible/roles/supervisor/handlers/main.yml
+++ b/ansible/roles/supervisor/handlers/main.yml
@@ -1,5 +1,3 @@
 ---
-# Handler to handle DB tier notifications
-
-- name: restart supervisor
+- name: Restart supervisor
   service: name=supervisord state=restarted
