--- a/ansible/roles/greenplum/defaults/main.yml
+++ b/ansible/roles/greenplum/defaults/main.yml
@@ -1,7 +1,3 @@
 ---
-greenplum_prefix: /usr/local
 greenplum_version_target: 4.3.7.3
-greenplum_name: greenplum-db-4.3.7.3-build-2-RHEL5-x86_64
-greenplum_installer_bin: "{{ greenplum_name }}.bin"
-greenplum_zip: "{{ greenplum_name }}.zip"
-
+greenplum_version_rpm: 4.3.7.3-2
