--- a/ansible/roles/greenplum/vars/main.yml
+++ b/ansible/roles/greenplum/vars/main.yml
@@ -1,7 +1,6 @@
 ---
-greenplum_install_dir: "{{ greenplum_prefix }}/greenplum-db-{{ greenplum_version_target }}"
+greenplum_install_dir: /usr/local/greenplum-db
 greenplum_datadir: /data
-greenplum_download_url: http://rpm.palette-software.net/install/greenplum/{{ greenplum_zip }}
 
 greenplum_hosts_file: /etc/gphosts
 greenplum_user: gpadmin
