--- a/ansible/roles/greenplum-data/vars/main.yml
+++ b/ansible/roles/greenplum-data/vars/main.yml
@@ -7,6 +7,8 @@ greenplum_hosts_file: /etc/gphosts
 greenplum_user: gpadmin
 greenplum_default_db: palette
 
+greenplum_hostname: 127.0.0.1
+
 # The amount of 'Other Memory' to use when calculating
 # the gp_vmem_protect_limit
 greenplum_other_mem: 0
