Configure splunk hostname from inventory

--- a/ansible/roles/splunkforwarder/templates/inputs.conf
+++ b/ansible/roles/splunkforwarder/templates/inputs.conf
@@ -1,13 +1,13 @@
 [default]
-host = {{ inventory_hostname }}
+host = {{ splunk_host }}
 
 [monitor:///var/log/palette-insight-server/errors.log]
 sourcetype=_json
-index = ANSIBLEinsightserver
+index = insightserver
 
 [monitor:///var/log/palette-insight-server/palette-insight-server.log]
 sourcetype=_json
-index = ANSIBLEinsightserver
+index = insightserver
 
 [monitor:///data/insight-loader/Palette_Insight_Init_ImportTable/rolling_pretty.log]
 index=ANSIBLEPaletteInsightLOADTABLES
