--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+- name: update packages
+  yum: name=* state=latest
+
 - name: install ca package on rhel systems
   yum:
     name: ca-certificates
