--- a/ansible/roles/insight-server/tasks/main.yml
+++ b/ansible/roles/insight-server/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Insight Server package
-  yum: name=palette-insight-server state=latest
+  yum: name=palette-insight-server state=latest update_cache=yes
   notify:
     - Restart palette-insight-server
     - Restart splunk
