--- a/ansible/roles/palette-dev-tools/tasks/main.yml
+++ b/ansible/roles/palette-dev-tools/tasks/main.yml
@@ -1,13 +1,6 @@
 ---
 - name: Install Palette Dev Team tools
-  yum: name={{ item }} state=present
-  with_items:
-    - git
-    - curl
-    - wget
-    - screen
-    - tmux
-    - htop
+  yum: name=git,curl,wget,screen,tmux,htop,mosh state=present
 
 - name: Install OpenJDK (1.8)
   yum: name=java-1.8.0-openjdk state=present
