added initial steps for data model install

--- a/ansible/aws-hosts2.ini
+++ b/ansible/aws-hosts2.ini
@@ -1,7 +1,7 @@
 [early-adopter]
-bsci-insight-centos6.palette-software.net splunk_host=BSCI-PROD2
-netflix-insight-centos6.palette-software.net splunk_host=NETFLIX2
-hdi-insight.palette-software.net splunk_host=HDI
+bsci-insight.palette-software.net splunk_host=BSCI-PROD2 cluster_name=bsci
+netflix-insight.palette-software.net splunk_host=NETFLIX2 cluster_name=netflix-cluster01
+hdi-insight.palette-software.net splunk_host=HDI cluster_name=hdi
 
 
 [early-adopter:vars]
