--- a/ansible/roles/insight-loadtables/tasks/main.yml
+++ b/ansible/roles/insight-loadtables/tasks/main.yml
@@ -1,3 +1,10 @@
 ---
-- name: Install Insight-loadTables to /opt/palette-insight-loadtables
+- name: Install Insight-loadTables to /opt/palette-insight-talend
   yum: name=palette-insight-loadtables state=latest update_cache=yes
+
+- name: Create the upload directory for insight-server uploads (based on license id)
+  file: path=/data/insight-server/uploads/{{ cluster_name }} state=directory mode=0755 owner=insight group=insight
+
+- name: Create the start_gpfdist.sh
+  template: src=start_gpfdist.sh dest=/data/insight-server/uploads/{{ cluster_name }}/start_gpfdist.sh owner=insight group=insight mode=755
+
