--- a/ansible/roles/insight-loadtables/templates/insight-gpfdist.ini
+++ b/ansible/roles/insight-loadtables/templates/insight-gpfdist.ini
@@ -1,9 +1,13 @@
 [program:insight-gpfdist]
 ; the program (relative uses PATH, can take args)
-command={{ insight_talend_location }}/start_gpfdist.sh
+command={{ greenplum_install_path }}/bin/gpfdist -p {{ gpfdist_port }} -v -m 268435456
+
 ;;process_name=%(program_name)s ; process_name expr (default %(program_name)s)
 ;;numprocs=1                    ; number of processes copies to start (def 1)
-;;directory=/tmp                ; directory to cwd to before exec (def no cwd)
+
+; directory to cwd to before exec (def no cwd)
+directory=/data/insight-server/uploads/{{ cluster_name }}/processing
+
 ;;umask=022                     ; umask for process (default None)
 ;;priority=999                  ; the relative start priority (default 999)
 ;
@@ -28,6 +32,7 @@ redirect_stderr=true          ; redirect proc stderr to stdout (default false)
 stdout_logfile=/var/log/insight-gpfdist/insight-gpfdist.log
 
 ;;stdout_logfile_maxbytes=1MB   ; max # logfile bytes b4 rotation (default 50MB)
+;
 ;;stdout_logfile_backups=10     ; # of stdout logfile backups (default 10)
 ;;stdout_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
 ;;stdout_events_enabled=false   ; emit events on stdout writes (default false)
@@ -39,6 +44,6 @@ stdout_logfile=/var/log/insight-gpfdist/insight-gpfdist.log
 ;;stderr_logfile_backups=10     ; # of stderr logfile backups (default 10)
 ;;stderr_capture_maxbytes=1MB   ; number of bytes in 'capturemode' (default 0)
 ;;stderr_events_enabled=false   ; emit events on stderr writes (default false)
-;;environment=A=1,B=2           ; process environment additions (def no adds)
+environment=GPHOME={{ greenplum_install_path }},PYTHONHOME={{ greenplum_install_path }}/ext/python,PYTHONPATH={{ greenplum_install_path }}/lib/python,PATH={{ greenplum_install_path }}/bin:{{ greenplum_install_path }}/ext/python/bin,LD_LIBRARY_PATH={{ greenplum_install_path }}/lib:{{ greenplum_install_path }}/ext/python/lib
 ;;serverurl=AUTO                ; override serverurl computation (childutils)
 
