--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -28,3 +28,6 @@
 
 - name: Disable IpTables (should use EC2 Security Groups)
   service: name=iptables enabled=no state=stopped
+
+- name: Sudo tabcompletion
+  lineinfile: dest=/etc/profile regexp='^complete -cf sudo$' line='complete -cf sudo'
